--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -6,20 +6,13 @@ BUILD = build
 
 # All source code files
 SRC = project_main.c\
-src/passwordUsernameFormatChecker.c\
-src/masterAccountFunctions.c\
-src/credentialFunctions.c\
-src/sha256.c\
-src/fileEncryptionDecryption.c\
+src/*.c\
 
 # All test source files
-TEST_SRC = src/passwordUsernameFormatChecker.c\
-src/masterAccountFunctions.c\
-src/credentialFunctions.c\
+TEST_SRC = src/*.c\
 test/testTextPadFunctions.c\
-src/sha256.c\
 unity/unity.c\
-src/fileEncryptionDecryption.c\
+
 
 TEST_OUTPUT = $(BUILD)/Test_$(PROJECT_NAME).out
 
